Function to create user vector.Next run it from C#

--- a/embedding.ipynb
+++ b/embedding.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,8 @@
     "from sklearn.preprocessing import LabelEncoder\n",
     "from sklearn.neighbors import KNeighborsClassifier\n",
     "import import_ipynb #requires pip install\n",
-    "from joblib import dump, load"
+    "from joblib import dump, load\n",
+    "import random"
    ]
   },
   {
@@ -42,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +96,7 @@
     "\n",
     "    user_genres = users.loc[:, [\"username\", \"fav_genres\"]]\n",
     "    genre_list = build_genre_list(user_genres[\"fav_genres\"])\n",
-    "\n",
+    "    print(genre_list)\n",
     "    for i in genre_list:\n",
     "        user_cols[i] = 0\n",
     "\n",
@@ -117,7 +118,7 @@
     "    #Get row of one user\n",
     "    user_row = user_cols.loc[user_cols[\"username\"] == user]\n",
     "    user_vector = user_row.copy()\n",
-    "    \n",
+    "    #print(user_row)\n",
     "    #Fit the encoder with the data of original df: user_cols\n",
     "    for col in user_cols.columns:\n",
     "        enc = encoder.fit(user_cols[col])\n",
@@ -149,7 +150,7 @@
     "    final_vector = pd.merge(string_features, genre_features, on = \"username\")\n",
     "    return final_vector\n",
     "\n",
-    "#result = construct_vectors()\n",
+    "result = construct_vectors()\n",
     "#result.to_csv(r\"D:\\dataset\\encoding\\user_vectors.csv\", index=False)\n",
     "#genre_columns()\n",
     "#vectorize_all()\n",
@@ -159,50 +160,205 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
     "pd.set_option('display.max_columns', 500)\n",
-    "result\n"
+    "#result\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Vectorise new user data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 163,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "y contains previously unseen labels: 'New-Genn'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "File \u001b[1;32mc:\\Users\\titot\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\sklearn\\utils\\_encode.py:224\u001b[0m, in \u001b[0;36m_encode\u001b[1;34m(values, uniques, check_unknown)\u001b[0m\n\u001b[0;32m    223\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[1;32m--> 224\u001b[0m     \u001b[39mreturn\u001b[39;00m _map_to_integer(values, uniques)\n\u001b[0;32m    225\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mKeyError\u001b[39;00m \u001b[39mas\u001b[39;00m e:\n",
-      "File \u001b[1;32mc:\\Users\\titot\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\sklearn\\utils\\_encode.py:164\u001b[0m, in \u001b[0;36m_map_to_integer\u001b[1;34m(values, uniques)\u001b[0m\n\u001b[0;32m    163\u001b[0m table \u001b[39m=\u001b[39m _nandict({val: i \u001b[39mfor\u001b[39;00m i, val \u001b[39min\u001b[39;00m \u001b[39menumerate\u001b[39m(uniques)})\n\u001b[1;32m--> 164\u001b[0m \u001b[39mreturn\u001b[39;00m np\u001b[39m.\u001b[39marray([table[v] \u001b[39mfor\u001b[39;49;00m v \u001b[39min\u001b[39;49;00m values])\n",
-      "File \u001b[1;32mc:\\Users\\titot\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\sklearn\\utils\\_encode.py:164\u001b[0m, in \u001b[0;36m<listcomp>\u001b[1;34m(.0)\u001b[0m\n\u001b[0;32m    163\u001b[0m table \u001b[39m=\u001b[39m _nandict({val: i \u001b[39mfor\u001b[39;00m i, val \u001b[39min\u001b[39;00m \u001b[39menumerate\u001b[39m(uniques)})\n\u001b[1;32m--> 164\u001b[0m \u001b[39mreturn\u001b[39;00m np\u001b[39m.\u001b[39marray([table[v] \u001b[39mfor\u001b[39;00m v \u001b[39min\u001b[39;00m values])\n",
-      "File \u001b[1;32mc:\\Users\\titot\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\sklearn\\utils\\_encode.py:158\u001b[0m, in \u001b[0;36m_nandict.__missing__\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m    157\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mnan_value\n\u001b[1;32m--> 158\u001b[0m \u001b[39mraise\u001b[39;00m \u001b[39mKeyError\u001b[39;00m(key)\n",
-      "\u001b[1;31mKeyError\u001b[0m: 'New-Genn'",
-      "\nDuring handling of the above exception, another exception occurred:\n",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[24], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m test \u001b[39m=\u001b[39m load(\u001b[39m\"\u001b[39m\u001b[39mfav_anime_period.pkl\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m----> 2\u001b[0m x \u001b[39m=\u001b[39m test\u001b[39m.\u001b[39;49mtransform([\u001b[39m\"\u001b[39;49m\u001b[39mNew-Genn\u001b[39;49m\u001b[39m\"\u001b[39;49m])[\u001b[39m0\u001b[39m]\n\u001b[0;32m      3\u001b[0m x\n",
-      "File \u001b[1;32mc:\\Users\\titot\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\sklearn\\utils\\_set_output.py:142\u001b[0m, in \u001b[0;36m_wrap_method_output.<locals>.wrapped\u001b[1;34m(self, X, *args, **kwargs)\u001b[0m\n\u001b[0;32m    140\u001b[0m \u001b[39m@wraps\u001b[39m(f)\n\u001b[0;32m    141\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mwrapped\u001b[39m(\u001b[39mself\u001b[39m, X, \u001b[39m*\u001b[39margs, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs):\n\u001b[1;32m--> 142\u001b[0m     data_to_wrap \u001b[39m=\u001b[39m f(\u001b[39mself\u001b[39;49m, X, \u001b[39m*\u001b[39;49margs, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n\u001b[0;32m    143\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39misinstance\u001b[39m(data_to_wrap, \u001b[39mtuple\u001b[39m):\n\u001b[0;32m    144\u001b[0m         \u001b[39m# only wrap the first output for cross decomposition\u001b[39;00m\n\u001b[0;32m    145\u001b[0m         \u001b[39mreturn\u001b[39;00m (\n\u001b[0;32m    146\u001b[0m             _wrap_data_with_container(method, data_to_wrap[\u001b[39m0\u001b[39m], X, \u001b[39mself\u001b[39m),\n\u001b[0;32m    147\u001b[0m             \u001b[39m*\u001b[39mdata_to_wrap[\u001b[39m1\u001b[39m:],\n\u001b[0;32m    148\u001b[0m         )\n",
-      "File \u001b[1;32mc:\\Users\\titot\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\sklearn\\preprocessing\\_label.py:139\u001b[0m, in \u001b[0;36mLabelEncoder.transform\u001b[1;34m(self, y)\u001b[0m\n\u001b[0;32m    136\u001b[0m \u001b[39mif\u001b[39;00m _num_samples(y) \u001b[39m==\u001b[39m \u001b[39m0\u001b[39m:\n\u001b[0;32m    137\u001b[0m     \u001b[39mreturn\u001b[39;00m np\u001b[39m.\u001b[39marray([])\n\u001b[1;32m--> 139\u001b[0m \u001b[39mreturn\u001b[39;00m _encode(y, uniques\u001b[39m=\u001b[39;49m\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mclasses_)\n",
-      "File \u001b[1;32mc:\\Users\\titot\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\sklearn\\utils\\_encode.py:226\u001b[0m, in \u001b[0;36m_encode\u001b[1;34m(values, uniques, check_unknown)\u001b[0m\n\u001b[0;32m    224\u001b[0m         \u001b[39mreturn\u001b[39;00m _map_to_integer(values, uniques)\n\u001b[0;32m    225\u001b[0m     \u001b[39mexcept\u001b[39;00m \u001b[39mKeyError\u001b[39;00m \u001b[39mas\u001b[39;00m e:\n\u001b[1;32m--> 226\u001b[0m         \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39my contains previously unseen labels: \u001b[39m\u001b[39m{\u001b[39;00m\u001b[39mstr\u001b[39m(e)\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m)\n\u001b[0;32m    227\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[0;32m    228\u001b[0m     \u001b[39mif\u001b[39;00m check_unknown:\n",
-      "\u001b[1;31mValueError\u001b[0m: y contains previously unseen labels: 'New-Genn'"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>username</th>\n",
+       "      <th>experience</th>\n",
+       "      <th>gender</th>\n",
+       "      <th>generation</th>\n",
+       "      <th>fav_anime_period</th>\n",
+       "      <th>Shounen</th>\n",
+       "      <th>Seinen</th>\n",
+       "      <th>Mystery</th>\n",
+       "      <th>Kids</th>\n",
+       "      <th>Parody</th>\n",
+       "      <th>Josei</th>\n",
+       "      <th>Shoujo</th>\n",
+       "      <th>Fantasy</th>\n",
+       "      <th>Sports</th>\n",
+       "      <th>School</th>\n",
+       "      <th>Action</th>\n",
+       "      <th>Drama</th>\n",
+       "      <th>Supernatural</th>\n",
+       "      <th>Ecchi</th>\n",
+       "      <th>Martial Arts</th>\n",
+       "      <th>Horror</th>\n",
+       "      <th>Sci-Fi</th>\n",
+       "      <th>Adventure</th>\n",
+       "      <th>Game</th>\n",
+       "      <th>Cars</th>\n",
+       "      <th>Romance</th>\n",
+       "      <th>Police</th>\n",
+       "      <th>Super Power</th>\n",
+       "      <th>Space</th>\n",
+       "      <th>Music</th>\n",
+       "      <th>Military</th>\n",
+       "      <th>Historical</th>\n",
+       "      <th>Harem</th>\n",
+       "      <th>Psychological</th>\n",
+       "      <th>Samurai</th>\n",
+       "      <th>Magic</th>\n",
+       "      <th>Thriller</th>\n",
+       "      <th>Slice of Life</th>\n",
+       "      <th>Mecha</th>\n",
+       "      <th>Vampire</th>\n",
+       "      <th>Shounen Ai</th>\n",
+       "      <th>Comedy</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>41563</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   username  experience  gender  generation  fav_anime_period  Shounen  \\\n",
+       "0     41563           3       1           2                 0        1   \n",
+       "\n",
+       "   Seinen  Mystery  Kids  Parody  Josei  Shoujo  Fantasy  Sports  School  \\\n",
+       "0       0        0     0       0      0       0        0       0       0   \n",
+       "\n",
+       "   Action  Drama  Supernatural  Ecchi  Martial Arts  Horror  Sci-Fi  \\\n",
+       "0       0      0             0      0             0       0       0   \n",
+       "\n",
+       "   Adventure  Game  Cars  Romance  Police  Super Power  Space  Music  \\\n",
+       "0          0     0     0        1       0            0      0      0   \n",
+       "\n",
+       "   Military  Historical  Harem  Psychological  Samurai  Magic  Thriller  \\\n",
+       "0         0           0      0              0        0      0         0   \n",
+       "\n",
+       "   Slice of Life  Mecha  Vampire  Shounen Ai  Comedy  \n",
+       "0              0      0        0           0       1  "
+      ]
+     },
+     "execution_count": 163,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "test = load(\"fav_anime_period.pkl\")\n",
-    "x = test.transform([\"New-Gen\"])[0]\n",
-    "x"
+    "#test = load(\"fav_anime_period.pkl\").transform([\"New-Gen\"])[0]\n",
+    "#print(test)\n",
+    "\n",
+    "def new_user():\n",
+    "    username = random.randint(0,1000000)\n",
+    "    experience = load(\"encoders/experience.pkl\").transform([\"Veteran\"])[0]\n",
+    "    gender = load(\"encoders/gender.pkl\").transform([\"Male\"])[0]\n",
+    "    generation = load(\"encoders/generation.pkl\").transform([\"Millenials\"])[0]\n",
+    "    fav_anime_period = load(\"encoders/fav_anime_period.pkl\").transform([\"Classic\"])[0]\n",
+    "    fav_genres = [\"Shounen\",\"Comedy\",\"Romance\"]\n",
+    "\n",
+    "    #Vectorise genres\n",
+    "    \n",
+    "    descriptive_cols = pd.DataFrame({\"username\":[username], \"experience\":[experience], \"gender\":[gender],\"generation\":[generation], \"fav_anime_period\":[fav_anime_period]})\n",
+    "    columns = ['username','Shounen', 'Seinen', 'Mystery', 'Kids', 'Parody', 'Josei', 'Shoujo', 'Fantasy', 'Sports', 'School', 'Action', 'Drama', 'Supernatural', 'Ecchi', 'Martial Arts', 'Horror', 'Sci-Fi', 'Adventure', 'Game', 'Cars', 'Romance', 'Police', 'Super Power', 'Space', 'Music', 'Military', 'Historical', 'Harem', 'Psychological', 'Samurai', 'Magic', 'Thriller', 'Slice of Life', 'Mecha', 'Vampire', 'Shounen Ai', 'Comedy']\n",
+    "    genres = pd.DataFrame(columns=columns)\n",
+    "    #p = {genre: 0 for genre in columns}\n",
+    "    genres = pd.DataFrame(columns=columns)\n",
+    "    genres.loc[\"test\"]=0\n",
+    "    genres[\"username\"]=username\n",
+    "    row = [0]*len(columns)\n",
+    "    row.insert(0, username)\n",
+    "\n",
+    "    for y in fav_genres:\n",
+    "        #encode each of the three favourite genres with value: 1\n",
+    "        genres[y] = 1\n",
+    "\n",
+    "    v = pd.merge(descriptive_cols, genres)\n",
+    "    return v\n",
+    "\n",
+    "sample_data = []\n",
+    "new_user()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -251,7 +407,7 @@
        "9301      6443           3       1           1                 1"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
