Fixed issue with embedding only on existing user's data rather than all possible values.

--- a/embedding.ipynb
+++ b/embedding.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +96,7 @@
     "\n",
     "    user_genres = users.loc[:, [\"username\", \"fav_genres\"]]\n",
     "    genre_list = build_genre_list(user_genres[\"fav_genres\"])\n",
-    "    print(genre_list)\n",
+    "    #print(genre_list)\n",
     "    for i in genre_list:\n",
     "        user_cols[i] = 0\n",
     "\n",
@@ -120,13 +120,20 @@
     "    user_vector = user_row.copy()\n",
     "    #print(user_row)\n",
     "    #Fit the encoder with the data of original df: user_cols\n",
-    "    for col in user_cols.columns:\n",
-    "        enc = encoder.fit(user_cols[col])\n",
-    "        #save the conder to file\n",
-    "\n",
-    "        dump(enc, f\"{col}.pkl\")\n",
+    "    exp = [\"Newbie\",\"Regular\",\"Active\",\"Veteran\"]\n",
+    "    gender = [\"Male\", \"Female\", \"Non-Binary\"]\n",
+    "    gen = [\"Gen Alpha\",\"Gen Z\",\"Millenials\",\"Gen X\"]\n",
+    "    fav_period = [\"New-Gen\",\"Classic\"]\n",
+    "    cols = [exp, gender, gen, fav_period]\n",
+    "    names = [\"experience\",\"gender\",\"generation\",\"fav_anime_period\"]\n",
+    "    for i in range (0,4):\n",
+    "        enc = encoder.fit(cols[i])\n",
+    "        #print(cols[i])\n",
+    "        current_col = names[i]\n",
+    "        #save the enconder to file\n",
+    "        dump(enc, f\"{names[i]}.pkl\")\n",
     "        #print(list(enc.classes_))\n",
-    "        user_vector[col]=enc.transform(user_vector[col]) #encode each column of target user\n",
+    "        user_vector[current_col]=enc.transform(user_vector[current_col]) #encode each column of target user\n",
     "\n",
     "    return user_vector\n",
     "\n",
@@ -151,7 +158,7 @@
     "    return final_vector\n",
     "\n",
     "result = construct_vectors()\n",
-    "#result.to_csv(r\"D:\\dataset\\encoding\\user_vectors.csv\", index=False)\n",
+    "result.to_csv(r\"D:\\dataset\\encoding\\user_vectors.csv\", index=False)\n",
     "#genre_columns()\n",
     "#vectorize_all()\n",
     "#user_cols\n",
@@ -178,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -212,28 +219,7 @@
        "      <th>Mystery</th>\n",
        "      <th>Kids</th>\n",
        "      <th>Parody</th>\n",
-       "      <th>Josei</th>\n",
-       "      <th>Shoujo</th>\n",
-       "      <th>Fantasy</th>\n",
-       "      <th>Sports</th>\n",
-       "      <th>School</th>\n",
-       "      <th>Action</th>\n",
-       "      <th>Drama</th>\n",
-       "      <th>Supernatural</th>\n",
-       "      <th>Ecchi</th>\n",
-       "      <th>Martial Arts</th>\n",
-       "      <th>Horror</th>\n",
-       "      <th>Sci-Fi</th>\n",
-       "      <th>Adventure</th>\n",
-       "      <th>Game</th>\n",
-       "      <th>Cars</th>\n",
-       "      <th>Romance</th>\n",
-       "      <th>Police</th>\n",
-       "      <th>Super Power</th>\n",
-       "      <th>Space</th>\n",
-       "      <th>Music</th>\n",
-       "      <th>Military</th>\n",
-       "      <th>Historical</th>\n",
+       "      <th>...</th>\n",
        "      <th>Harem</th>\n",
        "      <th>Psychological</th>\n",
        "      <th>Samurai</th>\n",
@@ -249,38 +235,17 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>41563</td>\n",
+       "      <td>766096</td>\n",
        "      <td>3</td>\n",
        "      <td>1</td>\n",
-       "      <td>2</td>\n",
+       "      <td>3</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>...</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -294,29 +259,23 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>1 rows × 42 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "   username  experience  gender  generation  fav_anime_period  Shounen  \\\n",
-       "0     41563           3       1           2                 0        1   \n",
+       "0    766096           3       1           3                 0        1   \n",
        "\n",
-       "   Seinen  Mystery  Kids  Parody  Josei  Shoujo  Fantasy  Sports  School  \\\n",
-       "0       0        0     0       0      0       0        0       0       0   \n",
+       "   Seinen  Mystery  Kids  Parody  ...  Harem  Psychological  Samurai  Magic  \\\n",
+       "0       0        0     0       0  ...      0              0        0      0   \n",
        "\n",
-       "   Action  Drama  Supernatural  Ecchi  Martial Arts  Horror  Sci-Fi  \\\n",
-       "0       0      0             0      0             0       0       0   \n",
+       "   Thriller  Slice of Life  Mecha  Vampire  Shounen Ai  Comedy  \n",
+       "0         0              0      0        0           0       1  \n",
        "\n",
-       "   Adventure  Game  Cars  Romance  Police  Super Power  Space  Music  \\\n",
-       "0          0     0     0        1       0            0      0      0   \n",
-       "\n",
-       "   Military  Historical  Harem  Psychological  Samurai  Magic  Thriller  \\\n",
-       "0         0           0      0              0        0      0         0   \n",
-       "\n",
-       "   Slice of Life  Mecha  Vampire  Shounen Ai  Comedy  \n",
-       "0              0      0        0           0       1  "
+       "[1 rows x 42 columns]"
       ]
      },
-     "execution_count": 163,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -358,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -392,10 +351,10 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>9301</th>\n",
-       "      <td>6443</td>\n",
+       "      <td>badking95</td>\n",
        "      <td>3</td>\n",
        "      <td>1</td>\n",
-       "      <td>1</td>\n",
+       "      <td>2</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -403,11 +362,11 @@
        "</div>"
       ],
       "text/plain": [
-       "      username  experience  gender  generation  fav_anime_period\n",
-       "9301      6443           3       1           1                 1"
+       "       username  experience  gender  generation  fav_anime_period\n",
+       "9301  badking95           3       1           2                 1"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
