Cookie updates with new "IsNew" value + Created dashboard page.

--- a/embedding.ipynb
+++ b/embedding.ipynb
@@ -96,7 +96,7 @@
     "\n",
     "    user_genres = users.loc[:, [\"username\", \"fav_genres\"]]\n",
     "    genre_list = build_genre_list(user_genres[\"fav_genres\"])\n",
-    "    #print(genre_list)\n",
+    "    print(genre_list)\n",
     "    for i in genre_list:\n",
     "        user_cols[i] = 0\n",
     "\n",
@@ -104,7 +104,7 @@
     "        user_row = user_cols.loc[user_cols[\"username\"] == y[\"username\"]]\n",
     "        #print(y)\n",
     "        #encode each of the three favourite genres with value: 1\n",
-    "        user_row[y[\"fav_genres\"][0]] = 1\n",
+    "        user_row[y[\"fav_genres\"][0]] = 1 #experiement with changing to 10\n",
     "        user_row[y[\"fav_genres\"][1]] = 1\n",
     "        user_row[y[\"fav_genres\"][2]] = 1\n",
     "\n",
@@ -157,9 +157,10 @@
     "    final_vector = pd.merge(string_features, genre_features, on = \"username\")\n",
     "    return final_vector\n",
     "\n",
-    "result = construct_vectors()\n",
-    "result.to_csv(r\"D:\\dataset\\encoding\\user_vectors.csv\", index=False)\n",
+    "#result = construct_vectors()\n",
+    "#result.to_csv(r\"D:\\dataset\\encoding\\user_vectors.csv\", index=False)\n",
     "#genre_columns()\n",
+    "#build_genre_list(anime[\"genre\"])\n",
     "#vectorize_all()\n",
     "#user_cols\n",
     "# need to translate genres that user is asked to anime genres\n"
