--- a/neighbours.ipynb
+++ b/neighbours.ipynb
@@ -954,6 +954,45 @@
     "    return main_recs, more_anime\n",
     "full_recommendations()[1]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['MartialArts', 'Horror', 'Vampire', 'ShoujoAi', 'Dementia', 'Mecha', 'Magic', 'Seinen', 'School', 'Sci-Fi', 'Josei', 'Shoujo', 'Mystery', 'Ecchi', 'Parody', 'Historical', 'Romance', 'Drama', 'Cars', 'SliceofLife', 'Samurai', 'Shounen', 'Police', 'Harem', 'Comedy', 'Game', 'Action', 'Supernatural', 'Hentai', 'Thriller', 'SuperPower', 'Yuri', 'Demons', 'Kids', 'Space', 'ShounenAi', 'Yaoi', 'Music', 'Adventure', 'Psychological', 'Military', 'Sports', 'Fantasy']\n"
+     ]
+    }
+   ],
+   "source": [
+    "t = list(anime[\"genre\"])\n",
+    "\n",
+    "#Building a dictionary of all genres - 43\n",
+    "def split(genres):\n",
+    "    return str(genres).split(\",\")\n",
+    "\n",
+    "split_genres = anime[\"genre\"].apply(split)\n",
+    "#Updating the set to get the individual genre names in the set instead of the original list of genres\n",
+    "genre_set = set()\n",
+    "for i in split_genres: \n",
+    "    genre_set.update(i)\n",
+    "result = list(genre_set)\n",
+    "\n",
+    "#Removing duplicates with blank spaces\n",
+    "final_result = []\n",
+    "for i in result:\n",
+    "    if i!=\"nan\":\n",
+    "        new = i.replace(\" \", \"\")\n",
+    "        final_result.append(new)\n",
+    "\n",
+    "#Removing duplicates now that spaces have been removed\n",
+    "genre_list = list(set(final_result))\n",
+    "print(genre_list)"
+   ]
   }
  ],
  "metadata": {
